Archive2/87/e4d50c8d31b39b/output
main.cpp: In function 'int main()':
main.cpp:13:5: error: expected ')' before 'std'
     std::istringstream input;
     ^
main.cpp:14:5: error: 'input' was not declared in this scope
     input.str("1\n2\n3\n4\n5\n6\n7\n");
     ^
